infra/k3s/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: falkordb-nodeport
  namespace: lattice
  labels:
    app: falkordb
spec:
  type: NodePort
  ports:
    - port: 6379
      targetPort: 6379
      nodePort: 30637
      protocol: TCP
      name: redis
  selector:
    app: falkordb
