infra/k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: falkordb
  namespace: lattice
  labels:
    app: falkordb
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
  selector:
    app: falkordb
